Thu Feb 19 12:16:33 CET 2004 (tl)
  * freshclam: + write pid file if run as daemon (new option -p|--pid)
               + handle signals: HUP  = re-open logfiles
	                         TERM = terminate (with log message)
				 ALRM = wake up and check mirror (also on
				        SIGUSR1)


Thu Feb 19 10:05:39 GMT 2004 (njh)
----------------------------------
  * clamav-milter: Reworked TCPwrappers code thanks to
		"Hector M. Rulot Segovia" <Hector.Rulot@uv.es>
		Changed some printf/puts to cli_dbgmsg

Wed Feb 18 13:35:59 GMT 2004 (njh)
----------------------------------
  * libclamav:		Handle buffer overflows on files with long suffixes
  * clamav-milter:	Added --dont-log-clean argument

Wed Feb 18 10:12:54 GMT 2004 (njh)
----------------------------------
  * libclamav:	Found some occurances of Yaha
	Added debug of number of lines in (encoded) attachment
  * clamav-milter:	clamav-milter now builds on freeBSD 5.2 (wrong logic
  		in including malloc.h)
	clamav-milter no longer allows --force to override TCPwrappers

Wed Feb 18 04:09:56 CET 2004 (tk)
---------------------------------
  * clamd: temporarily disabled strerror_r (due to a compilation problem on
	   Solaris reported by Nigel)

Tue Feb 17 23:43:22 CET 2004 (tk)
---------------------------------
  * configure: fixed in_port_t detection on OpenBSD (problem reported by Nigel)
  * clamdscan: fixed problem with /cygdrive/ on Cygwin (thanks to Andrey
	       Cherezov <andrey*cherezov.koenig.su>)

Tue Feb 17 20:49:23 GMT 2004 (njh)
----------------------------------
  * libclamav: Added a new bounce delimeter
  * test:	Updated mbox/debugm.c compilation instructions
  		removed SIGINT signal handler

Tue Feb 17 17:09:24 GMT 2004 (trog)
-----------------------------------
  * clamd: SIGHUP re-open log file support

Tue Feb 17 09:59:03 GMT 2004 (njh)
----------------------------------
  * libclamav: Added a new bounce delimeter

Tue Feb 17 01:06:58 CET 2004 (tk)
---------------------------------